--- a/.github/workflows/send_low_stock.yml
+++ b/.github/workflows/send_low_stock.yml
@@ -2,7 +2,7 @@ name: Send Low Stock Report Daily
 
 on:
   schedule:
-    - cron: ''55 13 * * *''  # Every day 12:30 PM UTC (6 PM IST)
+    - cron: '5 14 * * *'  # Every day 12:30 PM UTC (6 PM IST)
 
 jobs:
   send-report:
